--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,14 +2,17 @@
   "include": [
     "**/*"
   ],
+  "exclude": [
+    "./ixfx/**/*"
+  ],
   "compilerOptions": {
     "checkJs": true,
+    "lib": [
+      "ES2021",
+      "DOM"
+    ],
+    "target": "ES2021",
     "baseUrl": "./",
-    // "paths": {
-    //   "/ixfx/*": [
-    //     "node_modules/ixfx/dist/*"
-    //   ]
-    // },
     "moduleResolution": "node"
   }
 }
