--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ixfx-demos",
   "version": "1.0.0",
   "description": "Demos of ixfx",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "start": "live-server --no-browser"
   },
