--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/ClintH/ixfx-demos#readme",
   "dependencies": {
     "browser-sync": "^2.27.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.20.0"
   }
 }
