--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Demos of ixfx",
   "main": "index.html",
   "scripts": {
-    "start": "browser-sync -f *.html -f *.js -f *.css --no-open --no-ui"
+    "start": "browser-sync start --config 'bs-config.js'",
+    "bs": "browser-sync start --config 'bs-config.js' --no-open",
+    "edge": "/Applications/Microsoft\\ Edge\\ Canary.app/Contents/MacOS/Microsoft\\ Edge\\ Canary --auto-open-devtools-for-tabs http://localhost:3000",
+    "bs-edge": "npm run bs & npm run edge",
+    "clean": "rimraf ixfx"
   },
   "repository": {
     "type": "git",
@@ -18,7 +22,8 @@
   },
   "homepage": "https://github.com/ClintH/ixfx-demos#readme",
   "dependencies": {
-    "browser-sync": "^2.27.10"
+    "browser-sync": "^2.27.10",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^8.20.0"
