--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bs": "browser-sync start --config 'bs-config.cjs' --no-open",
     "edge": "/Applications/Microsoft\\ Edge\\ Canary.app/Contents/MacOS/Microsoft\\ Edge\\ Canary --auto-open-devtools-for-tabs http://localhost:3000",
     "bs-edge": "npm run bs & npm run edge",
-    "clean": "rimraf ixfx",
+    "clean": "npx del-cli ixfx",
     "make-light": "node make-light.js"
   },
   "repository": {
