--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "type": "module",
   "scripts": {
-    "start": "browser-sync start --config 'bs-config.cjs'",
+    "start": "node server.js",
     "bs": "browser-sync start --config 'bs-config.cjs' --no-open",
     "edge": "/Applications/Microsoft\\ Edge\\ Canary.app/Contents/MacOS/Microsoft\\ Edge\\ Canary --auto-open-devtools-for-tabs http://localhost:3000",
     "bs-edge": "npm run bs & npm run edge",
@@ -24,8 +24,14 @@
   },
   "homepage": "https://github.com/ClintH/ixfx-demos#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "browser-sync": "^2.27.10",
-    "del": "^7.0.0"
+    "cookie-parser": "^1.4.6",
+    "debug": "^4.3.4",
+    "del": "^7.0.0",
+    "express": "^4.18.1",
+    "express-ws": "^5.0.2",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
     "cpy": "^9.0.1",
