--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "edge": "/Applications/Microsoft\\ Edge\\ Canary.app/Contents/MacOS/Microsoft\\ Edge\\ Canary --auto-open-devtools-for-tabs http://localhost:3000",
     "bs-edge": "npm run bs & npm run edge",
     "clean": "npx del-cli ixfx",
+    "build": "npm run clean && npm --prefix ../ixfx/ run demos",
     "make-light": "node make-light.js"
   },
   "repository": {
