--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "bs": "browser-sync start --config 'bs-config.cjs' --no-open",
-    "edge": "/Applications/Microsoft\\ Edge\\ Canary.app/Contents/MacOS/Microsoft\\ Edge\\ Canary --auto-open-devtools-for-tabs http://localhost:3000",
-    "bs-edge": "npm run bs & npm run edge",
-    "make-light": "node make-light.js"
+    "make-light": "node make-light.js",
+    "serve:ws": "node ws-server.js",
+    "serve:http": "five-server",
+    "serve:express": "node express-ws-server.js",
+    "serve": "concurrently npm:serve:*",
+    "ngrok": "ngrok start --all --config ./ngrok.yml",
+    "start": "npm run serve:express"
   },
   "repository": {
     "type": "git",
@@ -27,22 +29,22 @@
   },
   "homepage": "https://github.com/ClintH/ixfx-demos#readme",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "browser-sync": "^2.27.10",
-    "cookie-parser": "^1.4.6",
-    "debug": "^4.3.4",
-    "del": "^7.0.0",
-    "express": "^4.18.1",
-    "express-ws": "^5.0.2",
+    "five-server": "^0.3.1",
     "ws": "^8.9.0"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.4.0",
+    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.0",
     "cpy": "^9.0.1",
-    "cpy-cli": "^4.1.0",
+    "del": "^7.0.0",
     "eslint": "^8.20.0",
     "eslint-plugin-unicorn": "^48.0.1",
-    "replace-in-file": "^6.3.5",
-    "sync-glitch-cli": "^2.0.1"
+    "express": "^4.18.2",
+    "express-ws": "^5.0.2",
+    "replace-in-file": "^6.3.5"
+  },
+  "stackblitz": {
+    "startCommand": "concurrently 'npm:serve:*'"
   }
 }
