--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": ">=14.0.0"
   },
   "scripts": {
+    "clone:npm": "node copy-for-npm.js",
     "clone:light": "node copy-for-light.js",
     "clone:glitch": "node copy-for-glitch.js",
     "clone": "concurrently npm:clone:*",
