--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "unicorn/prevent-abbreviations":"off",
     "unicorn/consistent-function-scoping": "off",
     "unicorn/require-post-message-target-origin": "off",
+    "unicorn/prefer-ternary": "off",
     "indent": [
       "error",
       2,
